@@ -2,9 +2,6 @@
 package edu.colorado.phet.sugarandsaltsolutions.micro.model.calciumchloride;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
-import edu.colorado.phet.common.phetcommon.util.function.Function2;
-import edu.colorado.phet.sugarandsaltsolutions.micro.model.Component;
-import edu.colorado.phet.sugarandsaltsolutions.micro.model.Component.CalciumIon;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Crystal;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.CalciumIonParticle;
@@ -17,15 +14,6 @@ import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.Chl
  */
 public class CalciumChlorideCrystal extends Crystal<SphericalParticle> {
     public CalciumChlorideCrystal( ImmutableVector2D position, CalciumChlorideLattice lattice ) {
-        super( position, new CalciumIonParticle().radius + new ChlorideIonParticle().radius, new Function2<Component, Double, SphericalParticle>() {
-                   public SphericalParticle apply( Component component, Double angle ) {
-                       if ( component instanceof CalciumIon ) {
-                           return new CalciumIonParticle();
-                       }
-                       else {
-                           return new ChlorideIonParticle();
-                       }
-                   }
-               }, lattice );
+        super( position, new CalciumIonParticle().radius + new ChlorideIonParticle().radius, lattice );
     }
 }
