@@ -1,11 +1,0 @@
-package edu.colorado.phet.sugarandsaltsolutions.micro.model.sucrose;
-
-import edu.colorado.phet.sugarandsaltsolutions.micro.model.Component;
-
-/**
- * A sugar molecule, but named sugar component to emphasize its role in lattice construction.
- *
- * @author Sam Reid
- */
-public class SucroseComponent extends Component {
-}
